Imlemented basic tablet view plus human readable timestands and other fixes

--- a/src/components/CommentsInput.scss
+++ b/src/components/CommentsInput.scss
@@ -1,38 +1,56 @@
-@use '../styles/partials/variables' as *;
-@use '../styles/partials/colors' as *;
+@use "../styles/partials/variables" as *;
+@use "../styles/partials/colors" as *;
+@use "../styles/partials/mixins" as *;
 
-.CommentsInput{
-    margin-left: $pad-mobile;
-    margin-right: $pad-mobile;
+.CommentsInput {
+  margin-left: $pad-mobile;
+  margin-right: $pad-mobile;
+  display: flex;
+  gap: $pad-mobile;
+  &__avatar {
+    background-color: none;
+    padding-top: 20px;
+  }
+  &__right {
+    flex-grow: 1;
     display: flex;
-    gap: $pad-mobile;
-    &__avatar{
-        background-color: none;
-        padding-top: 20px;
+    flex-direction: column;
+    background-color: none;
+    @include displayTablet{
+        flex-direction: row;
+        gap: $pad-tablet;
     }
-    &__input{
+    &__container {
+        background-color: none;
         flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-        background-color: none;
-        &__title{
-            padding: 0px;
-            margin: 0px;
-            text-align: left;
+      &__title {
+        padding: 0px;
+        margin: 0px;
+        text-align: left;
+      }
+      &__textbox {
+        background-color: $colSecondary-Albaster;
+        border-radius: 4px;
+        border-width: 1px;
+        border-color: $colSecondary-Mercury;
+        height: 100px;
+        width: 100%;
+        padding: 10px;
+        @include displayTablet {
+          height: 25px;
         }
-        &__textbox{
-            background-color: $colSecondary-Albaster;
-            border-radius: 4px;
-            border-width: 1px;
-            border-color: $colSecondary-Mercury;
-            height:100px;
-            width:100%;
-
-        }
-        &__button{
-            margin-top: $pad-mobile;
-            margin-bottom: $pad-mobile;
-            flex-grow: 1;
-        }
+      }
     }
+    &__button {
+      margin-top: $pad-mobile;
+      margin-bottom: $pad-mobile;
+      flex-grow: 1;
+      @include displayTablet {
+        flex-grow: 0;
+        margin-top: $pad-tablet;
+        margin-left: $pad-tablet;
+        min-width: 150px;
+      }
+    }
+  }
 }
