--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -11,3 +11,6 @@ $gut-mobile: 16px;
 $pad-before-mobile: 24px;
 $pad-after-mobile: 16px;
 $pad-between-mobile: 16px;
+
+
+$pad-tablet: 24px;
